--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.3.1",
     "emailjs-com": "^3.2.0",
     "openai": "^4.0.0",
     "react": "^18.2.0",
